test/Fail/Issue586.agda
module Issue586 where

{-# NO_TERMINATION_CHECK #-}
Foo : Set
Foo = Foo
